# milo-data-platform

./: .env.example  .gitignore  README.md  pyproject.toml
claude_chat_history_notes/: brand_category_master_data_schema.md  product_category_master_data.md
exports/: __init__.py  csv_exporter.py  pdf_report.py
exports/templates/: category_report.html
ingestion/: __init__.py  config.py  open_food_facts.py  openstreetmap.py  railway_extract.py  snowflake_loader.py
master_data/: __init__.py  brand_embeddings.py  brand_matcher.py  seed_brands.py  seed_stores.py  store_enricher.py
orchestration/github_actions/: daily_ingestion.yml  monthly_dbt_run.yml  weekly_master_data.yml
tests/: test_brand_matcher.py  test_railway_extract.py  test_snowflake_loader.py  test_store_enricher.py
transform/: dbt_project.yml  packages.yml  profiles.yml
transform/macros/: calc_penetration.sql  calc_share.sql  generate_date_spine.sql
transform/models/dimensions/: _dimensions.yml  dim_brand.sql  dim_category.sql  dim_store.sql  dim_time.sql  dim_user.sql
transform/models/facts/: _facts.yml  fact_transactions.sql
transform/models/marts/: _marts.yml  mart_category_performance.sql  mart_daily_category_store.sql  mart_panel_summary.sql
transform/seeds/: seed_belgian_holidays.csv  seed_brand_aliases.csv  seed_brand_category_hierarchy_lookup.csv  seed_brand_ignore.csv  seed_brand_lookup.csv  seed_brand_master.csv  seed_category_hierarchy.csv  seed_store_lookup.csv
transform/tests/: test_category_hierarchy.sql  test_no_future_dates.sql  test_penetration_bounds.sql
(+7 files in other folders)
